now get in tounch was working

--- a/backend/.env
+++ b/backend/.env
@@ -4,9 +4,24 @@
 # PORT=5000
 
 
+# MONGO_URI=mongodb+srv://vishalreddy4500:Mvr1234@cluster4500.gqcz6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4500
+# EMAIL_USER=vishalreddy4500@gmail.com
+# EMAIL_PASS=JNYa4gGMhbsXrj79
+# EMAIL_HOST=smtp-relay.brevo.com
+# EMAIL_PORT=587
+# PORT=5000
+
+
+# Your final environment variables file
+
+# --- MongoDB Connection ---
 MONGO_URI=mongodb+srv://vishalreddy4500:Mvr1234@cluster4500.gqcz6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4500
-EMAIL_USER=vishalreddy4500@gmail.com
-EMAIL_PASS=JNYa4gGMhbsXrj79
+
+# --- Brevo Email Settings ---
 EMAIL_HOST=smtp-relay.brevo.com
 EMAIL_PORT=587
+EMAIL_USER=889997001@smtp-brevo.com
+EMAIL_PASS=JNYa4gGMhbsXrj79
+
+# --- Server Port ---
 PORT=5000
