--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
-*.production
+# *.local
+# *.production
 
 # Editor directories and files
 .vscode/*
