--- a/backend/.env
+++ b/backend/.env
@@ -16,5 +16,6 @@ EMAIL_HOST=smtp-relay.brevo.com
 EMAIL_PORT=587
 EMAIL_USER=889997005@smtp-brevo.com
 EMAIL_PASS=RbPyWqBkwAEYaJF8
+RECEIVER_EMAIL=vishalreddy4500@gmail.com
 
 RENDER_URL=https://portfolio-pauc.onrender.com
